# chat-client

./: pyproject.toml
chat_client/: auth.py  client.py  helper.py  main.py  settings.py
chat_client/graphql/: get_all_channels.graphql  get_messages.graphql  get_my_channels.graphql  login.graphql  send_message.graphql
tests/: test_chat_client.py
