[tool.poetry]
name = "chat-client"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["arnor-nolen <andrey1gorbulin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.12.0"
gql = {version = "3.0.0b0", extras = ["all"]}
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
